syntax = "proto3";
package fproto_wrap_headers;

message Headers {
    message Values {
        repeated string values = 1;
    }
    map<string, Values> headers = 1;
}
